--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <input type="text" id="altura">
 
             <button type="submit" onclick="calculaIMC()">Calcular</button>
-            <div id="res" class="resultado invalido"></div>
+            <div id="res"></div>
         </form>
     </section>
 
